Add trace event to debug jank in app banners

BUG=905919

Change-Id: I6024a41113845bd6e6b50d829a0ea2b4ab3e5efb
Reviewed-on: https://chromium-review.googlesource.com/c/1336527
Reviewed-by: Avi Drissman <avi@chromium.org>
Commit-Queue: ssid <ssid@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608845}
Former-commit-id: 2788b5d7da99a31115f9337f1e8ff902b0014ace