chrome/browser/ui/tab_helpers.cc
@@ -10,6 +10,7 @@
 #include "base/command_line.h"
 #include "base/feature_list.h"
 #include "base/time/default_tick_clock.h"
+#include "base/trace_event/trace_event.h"
 #include "build/build_config.h"
 #include "chrome/browser/bookmarks/bookmark_model_factory.h"
 #include "chrome/browser/browser_process.h"
@@ -268,7 +269,11 @@ void TabHelpers::AttachTabHelpers(WebContents* web_contents) {
   // --- Platform-specific tab helpers ---
 
 #if defined(OS_ANDROID)
-  banners::AppBannerManagerAndroid::CreateForWebContents(web_contents);
+  {
+    // Remove after fixing https://crbug/905919
+    TRACE_EVENT0("browser", "AppBannerManagerAndroid::CreateForWebContents");
+    banners::AppBannerManagerAndroid::CreateForWebContents(web_contents);
+  }
   ContextMenuHelper::CreateForWebContents(web_contents);
   JavaScriptDialogTabHelper::CreateForWebContents(web_contents);
   if (OomInterventionTabHelper::IsEnabled()) {
